--- a/src/App.css
+++ b/src/App.css
@@ -453,3 +453,126 @@ footer img {
 .green-border {
   border: 4px solid rgb(216, 217, 205);
 }
+
+/**** MOBILE ADAPTATIONS ****/
+
+@media screen and (max-width: 830px) {
+
+  .menu {
+    grid-template-columns: 20% 20%;
+  }
+
+  .menu img {
+    width: 90%;
+  }
+
+  .navigation-menu {
+    display: none;
+  }
+
+  .location {
+    display: none;
+  }
+
+  .events {
+    display: block;
+    margin: 20px 20px 0 20px;
+  }
+
+  .event-item {
+    display: block;
+    margin: auto;
+    padding-bottom: 20px;
+  }
+
+  .information-block {
+    display: block;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .information-block img {
+    width: 90%;
+  }
+
+  .information-block p {
+    margin: auto;
+    padding: 0;
+    max-width: 100%;
+  }
+
+  .information-block-title {
+    text-align: center;
+  }
+
+  .carousel-block {
+    margin: auto;
+    max-width: 100%;
+  }
+
+  .summary-block {
+    padding: 20px;
+  }
+
+  .summary-block h4 {
+    padding: 0;
+  }
+
+  .advantages {
+    display: block;
+    font-size: 1.1rem;
+    margin: 20px;
+  }
+
+  .advantages img {
+    width: 8%;
+  }
+
+  .customer-feedback-title {
+    padding: 20px 0 20px 0;
+  }
+
+  .customer-feedback-title p {
+    padding: 0 10px;
+  }
+
+  .customer-feedback {
+    padding: 20px 0 20px 0;
+  }
+
+  .offers-line {
+    display: block;
+    padding: 20px;
+  }
+
+  .offer-block {
+    padding: 20px;
+  }
+
+  .legend-section {
+    text-align: center;
+    padding: 0 20px 20px 20px;
+  }
+
+  .access-title {
+    padding: 20px;
+  }
+
+  .access-block {
+    display: block;
+    padding: 20px;
+  }
+
+  .contact-information-line {
+    font-size: 1.1rem;
+  }
+
+  .contact-information-line img {
+    display: none;
+  }
+
+  .contact-information-line span {
+    padding: 0 2px;
+  }
+
+}
