--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,10 @@ h2 {
   grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
+.trigger-3pp-menu {
+  display: none;
+}
+
 /**** MAIN ****/
 
 /* Description */
@@ -459,15 +463,48 @@ footer img {
 @media screen and (max-width: 830px) {
 
   .menu {
-    grid-template-columns: 20% 20%;
+    grid-template-columns: 30% 40% 30%;
+    grid-template-rows: 2fr;
+    grid-template-areas:
+      "img . d1"
+      "d2 d2 d2";
   }
 
   .menu img {
+    grid-area: img;
     width: 90%;
   }
 
   .navigation-menu {
     display: none;
+    grid-area: d2;
+  }
+
+  .navigation-menu.is-open {
+    display: block;
+    text-align: left;
+  }
+
+  .navigation-menu.is-open a {
+    display: block;
+    padding-left: 15px;
+    padding-bottom: 15px;
+  }
+
+  .trigger-3pp-menu {
+    display: block;
+    grid-area: d1;
+    width: 100%;
+    padding: 25%;
+  }
+
+  .trigger-3pp-menu span {
+    display: block;
+    width: 60%;
+    height: 4px;
+    margin: 6px 0;
+    background-color: white;
+
   }
 
   .location {
