--- a/src/components/ImagesCarousel.css
+++ b/src/components/ImagesCarousel.css
@@ -38,12 +38,9 @@
     border: 4px solid white;
 }
 
-/*
-@media screen and (max-width: 600px) {
-    .carousel .slide img {
-        width: 100vw !important;
-        height: 40vh;
-        object-fit: cover;
+
+@media screen and (max-width: 830px) {
+    .carousel-block {
+        max-width: 100%;
     }
 }
-*/
