--- a/src/App.css
+++ b/src/App.css
@@ -334,8 +334,13 @@ h2 {
   padding: 20px 300px 100px 300px;
 }
 
+.customer-feedback a {
+  display: flex;
+  justify-content: center;
+}
+
 .customer-feedback img {
-  width: 100%;
+  width: 60%;
 }
 
 /* Offres */
@@ -598,6 +603,11 @@ footer img {
   .customer-feedback {
     padding: 20px 0 20px 0;
   }
+
+  .customer-feedback img {
+    width: 90%;
+  }
+
 
   .offers-line {
     display: block;
