--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,36 @@ body {
 
 /* HEADER */
 
+header {
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+}
+
 h2 {
   text-align: center;
   letter-spacing: 2px;
   font-size: 1.8rem;
   margin: auto;
+}
+
+.promo-banner {
+  background-color: rgb(216, 217, 205);
+  font-size: 2.4rem;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.promo-banner a {
+  font-weight: bold;
+  color: black;
+  text-decoration: underline;
+  transition: 0.6s;
+}
+
+.promo-banner a:hover {
+  color: white;
 }
 
 .menu {
@@ -38,8 +63,6 @@ h2 {
   min-height: 80px;
   width: 100%;
   opacity: 0.9;
-  position: fixed;
-  z-index: 1000;
 }
 
 .menu a {
@@ -100,7 +123,8 @@ h2 {
 .home-title h1 {
   font-size: 4rem;
   text-align: center;
-  padding: 200px 0 0 0;
+  /* padding without banner: 200px 0 0 0; */
+  padding: 260px 0 0 0;
   letter-spacing: 4px;
   /*text-transform: uppercase;*/
 }
@@ -116,7 +140,8 @@ h2 {
 .ecurie-title h1 {
   font-size: 4rem;
   text-align: center;
-  padding: 250px 0 0 0;
+  /* padding without banner: 250px 0 0 0; */
+  padding: 300px 0 0 0;
   letter-spacing: 4px;
   /*text-transform: uppercase;*/
 }
@@ -132,7 +157,8 @@ h2 {
 .hippodrome-title h1 {
   font-size: 4rem;
   text-align: center;
-  padding: 250px 0 0 0;
+  /* padding without banner: 250px 0 0 0; */
+  padding: 300px 0 0 0;
   letter-spacing: 4px;
   /*text-transform: uppercase;*/
 }
@@ -148,7 +174,8 @@ h2 {
 .prices-title h1 {
   font-size: 4rem;
   text-align: center;
-  padding: 250px 0 0 0;
+  /* padding without banner: 250px 0 0 0; */
+  padding: 300px 0 0 0;
   letter-spacing: 4px;
   /*text-transform: uppercase;*/
 }
@@ -532,6 +559,11 @@ footer img {
     margin: 6px 0;
     background-color: white;
 
+  }
+
+  .home-title h1 {
+    /* no mobile adaptation without banner */
+    padding: 290px 0 0 0;
   }
 
   .location {
